--- a/water-quality/config/config.env
+++ b/water-quality/config/config.env
@@ -3,3 +3,5 @@ PORT=5000
 
 MONGO_URI=mongodb+srv://aram249:Barca12345!@water-quality-cluster.a9sf8.mongodb.net/waterquality?retryWrites=true&w=majority
 
+GEOCODER_PROVIDED=googlecloudplatform
+GEOCODER_API_KEY=AIzaSyD7p_NsbSO7TDme0twe1sCSwlSPRfHpT7E
