--- a/water_quality_api/package.json
+++ b/water_quality_api/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "water-quality",
+  "name": "water_quality_api",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js "
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,11 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "geocoder": "^0.2.3",
-    "mongoose": "^5.10.9",
+    "mongoose": "^5.10.18",
     "node-geocoder": "^3.27.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.6"
   }
 }
