--- a/water_quality_api/config/config.env
+++ b/water_quality_api/config/config.env
@@ -4,5 +4,4 @@ PORT=5000
 MONGO_URI=mongodb+srv://aram249:Barca12345!@water-quality-cluster.a9sf8.mongodb.net/waterquality?retryWrites=true&w=majority
 
 GEOCODER_PROVIDED=google
-GEOCODER_API_KEY=https://maps.googleapis.com/maps/api/js?key=AIzaSyB8slKL4hH9zI6JejUS4WlIMHnNUwUEszg&callback=initMap&libraries=places
-key= https://maps.googleapis.com/maps/api/js?key=AIzaSyD7p_NsbSO7TDme0twe1sCSwlSPRfHpT7E&callback=initMap&libraries=places
+GEOCODER_API_KEY=https://maps.googleapis.com/maps/api/geocode/json?&sensor=true
