--- a/street_prototype_api/package.json
+++ b/street_prototype_api/package.json
@@ -6,12 +6,15 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "jquery": "^3.5.1",
     "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.0.5",
     "react-leaflet-markercluster": "^3.0.0-rc1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "swr": "^0.4.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
