--- a/Collision_prototype/client/package.json
+++ b/Collision_prototype/client/package.json
@@ -1,28 +1,16 @@
 {
-  "name": "street_prototype_api",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
-    "axios": "^0.21.1",
-    "jquery": "^3.5.1",
     "leaflet": "^1.7.1",
-    "leaflet-draw": "^1.0.4",
-    "leaflet-freedraw": "^2.13.3",
-    "prop-types": "^15.7.2",
-    "ramda": "^0.27.1",
     "react": "^17.0.1",
-    "react-axios": "^2.0.4",
     "react-dom": "^17.0.1",
-    "react-leaflet": "^2.8.0",
-    "react-leaflet-draw": "^0.19.0",
-    "react-leaflet-freedraw": "^0.1.2",
-    "react-leaflet-markercluster": "^3.0.0-rc1",
-    "react-router-dom": "^5.2.0",
+    "react-leaflet": "^3.0.5",
     "react-scripts": "4.0.1",
-    "swr": "^0.4.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -48,8 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
