--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "data.js",
   "dependencies": {
-    "ansi-align": "^3.0.0",
     "accepts": "^1.3.7",
+    "ansi-align": "^3.0.0",
     "anymatch": "^3.1.1",
     "asn1": "^0.2.4",
     "bcrypt-pbkdf": "^1.0.2",
@@ -45,8 +45,8 @@
     "ipaddr.js": "^1.9.1",
     "is-binary-path": "^2.1.0",
     "is-ci": "^2.0.0",
-    "is-fullwidth-code-point": "^2.0.0",
     "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^2.0.0",
     "is-glob": "^4.0.1",
     "is-installed-globally": "^0.3.2",
     "is-npm": "^4.0.0",
@@ -58,22 +58,23 @@
     "isarray": "^1.0.0",
     "isstream": "^0.1.2",
     "jsbn": "^0.1.1",
-    "json-schema": "^0.2.3",
     "json-buffer": "^3.0.0",
+    "json-schema": "^0.2.3",
     "json-schema-traverse": "^0.4.1",
     "json-stringify-safe": "^5.0.1",
     "kareem": "^2.3.1",
     "keyv": "^3.1.0",
-    "lowercase-keys": "^1.0.1",
+    "leaflet": "^1.7.1",
     "lodash": "^4.17.20",
+    "lowercase-keys": "^1.0.1",
     "make-dir": "^3.1.0",
     "media-typer": "^0.3.0",
     "memory-pager": "^1.5.0",
     "merge-descriptors": "^1.0.1",
     "methods": "^1.1.2",
     "mime": "^1.6.0",
-    "mime-types": "^2.1.27",
     "mime-db": "^1.44.0",
+    "mime-types": "^2.1.27",
     "mimic-response": "^1.0.1",
     "minimatch": "^3.0.4",
     "minimist": "^1.2.5",
@@ -85,8 +86,8 @@
     "negotiator": "^0.6.2",
     "node-fetch": "^2.6.1",
     "node-geocoder": "^3.27.0",
-    "nopt": "^1.0.10",
     "nodemon": "^2.0.6",
+    "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "normalize-url": "^4.5.0",
     "oauth-sign": "^0.9.0",
@@ -104,14 +105,17 @@
     "pstree.remy": "^1.1.8",
     "punycode": "^2.1.1",
     "qs": "^6.7.0",
-    "rc": "^1.2.8",
     "range-parser": "^1.2.1",
+    "rc": "^1.2.8",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-leaflet": "^3.0.5",
     "readdirp": "^3.4.0",
     "regexp-clone": "^1.0.0",
     "registry-auth-token": "^4.2.0",
     "registry-url": "^5.1.0",
-    "request-promise-core": "^1.1.4",
     "request-promise": "^4.2.6",
+    "request-promise-core": "^1.1.4",
     "require_optional": "^1.0.1",
     "resolve-from": "^2.0.0",
     "responselike": "^1.0.2",
@@ -121,8 +125,8 @@
     "sax": "^1.2.4",
     "semver": "^5.7.1",
     "semver-diff": "^3.1.1",
-    "serve-static": "^1.14.1",
     "send": "^0.17.1",
+    "serve-static": "^1.14.1",
     "setprototypeof": "^1.1.1",
     "sift": "^7.0.1",
     "signal-exit": "^3.0.3",
@@ -145,7 +149,9 @@
     "tunnel-agent": "^0.6.0",
     "tweetnacl": "^0.14.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/leaflet": "^1.5.19"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
